[tool.poetry]
name = "uibk-python"
version = "0.8"
description = "exercise 8"
authors = ["Isabell Baumann"]
license = "CC-BY-NC-4.0"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
