[tool.poetry]
name = "uibk-python"
version = "0.8"
description = "Exercises Python for Linguists"
authors = ["Nienke van den Hoeven"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
black = "^21.5b1"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
