[tool.poetry]
name = "uibk-python"
version = "0.9.0"
description = "Introductory python programming course for linguists"
authors = ["Nico Colic"]
license = "CC-BY-NC-4.0"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
nltk = "^3.6.2"
spacy = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
