[tool.poetry]
name = "exercise10"
version = "0.1.0"
description = "poetry for matplotlib"
authors = ["Lukas"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
