[tool.poetry]
name = "exercise11"
version = "0.1.0"
description = ""
authors = ["Lukas"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
nltk = "^3.6.2"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
