[tool.poetry]
name = "exercise12"
version = "0.1.0"
description = ""
authors = ["Lukas Grabherr"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
spacy = "^3.0.6"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
