[tool.poetry]
name = "basic_lib"
version = "0.1.0"
description = "Basic libraries flake8, black, pytest"
authors = ["MagLoe1"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.2"
black = "^21.5b0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
