[tool.poetry]
name = "poetry-exercise-8"
version = "0.1.0"
description = "test installation of poetry"
authors = ["Scenay"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
