[tool.poetry]
name = "testt"
version = "0.1.0"
description = "library for testt"
authors = ["Lukas Grabherr"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.5b0"
flake8 = "^3.9.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
