[tool.poetry]
name = "uibk-python-exercise-8"
version = "0.1.0"
description = "initialisation of poetry"
authors = ["Judith Grunser"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
black = "^21.5b1"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
